[project]
name = "continous-sverl-p"
version = "0.1.0"
description = "A Continous SVERL-P implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cma>=4.3.0",
    "gymnasium>=1.2.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "polars>=1.33.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
